# video-annotator

./: .envrc  .gitignore  README.md  pyproject.toml  requirements.txt
src/: framemgr.py  projstate.py  qcluster.py  s1analyze.py  s1setup.py  s2train.py  s3infer.py  vid2frames.py  vidstate.py
