[tool.poetry]
name = "public-vqa-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
groundlight = "^0.17.1"
framegrab = "^0.7.0"
imgcat = "^0.5.0"
tqdm = "^4.66.5"
torchvision = "^0.19.1"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
