[tool.poetry]
name = "video-annotator"
version = "0.1.0"
description = "Annotate video files with a custom computer vision model"
authors = ["Groundlight <info@groundlight.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
groundlight = "^0.17.1"
framegrab = "^0.7.0"
imgcat = "^0.5.0"
tqdm = "^4.66.5"
torch = { version = "^2.4.1+cpu", source = "pytorch" }
torchvision = { version = "^0.19.1+cpu", source = "pytorch" }
scikit-learn = "^1.5.1"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
